Fix welcome screen width and alignment in all browsers, Refs. #341

--- a/ui/static/main.css
+++ b/ui/static/main.css
@@ -1188,11 +1188,9 @@ div.machine-type {
     background-color: #6BA9C6;
     color: #A0A0A0;
     display: none;
-    margin-left: -35px;
     margin-top: -45px;
     padding: 65px 150px 35px;
     text-align: justify;
-    width: 398px;
 }
 
 #welcomeheader {
